--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cookie": "^1.0.2",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.2.4",
+    "next": "^15.3.2",
     "next-auth": "^5.0.0-beta.26",
     "next-cloudinary": "^6.16.0",
     "nookies": "^2.5.2",
