--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "module": "esnext",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "moduleResolution": "node",
    
