--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build && echo 'Skipping linting'",
+    "build": "prisma generate  &&  npm install --legacy-peer-deps && next build && echo 'Skipping linting'",
     "start": "next start",
-    "install": "npm install --legacy-peer-deps"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
