--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "prisma generate  &&  npm install --legacy-peer-deps && next build && echo 'Skipping linting'",
-    "start": "next start",
-    "postinstall": "prisma generate"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.0.2",
+    "@paystack/inline-js": "^2.22.4",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
@@ -24,8 +24,8 @@
     "next-cloudinary": "^6.16.0",
     "nookies": "^2.5.2",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-paystack": "^6.0.0",
