--- a/package.json
+++ b/package.json
@@ -45,5 +45,11 @@
     "prisma": "^6.7.0",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3"
+  },
+  "overrides": {
+    "react-paystack": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
