--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate  &&  npm install --legacy-peer-deps && next build && echo 'Skipping linting'",
+    "build": "prisma generate  && next build && echo 'Skipping linting'",
     "start": "next start"
   },
   "dependencies": {
